Github route add support at filter
Update Swagger
